--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "gatsby-plugin-simple-analytics": "^1.0.3",
     "prettier": "2.1.2"
   },
   "repository": {
